<resources>
    <string name="app_name">QuickBooker</string>
    <string name="navigation_drawer_open">1</string>
    <string name="navigation_drawer_Close">2</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="setting">setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">Get Code</string>

    <string name="currency">$</string>
    <string name="sign_In">Submit Code</string>
    <string name="todo">todo</string>
    <string name="enterYourEmail">+880 (Add Country Code)</string>
    <string name="enter_phone_number">Enter the verification code</string>
    <string name="product_name">Product name</string>
    <string name="sell_price">Selling Price</string>
    <string name="stock_hint">Stock</string>
    <string name="buyPrice_hint">Buy Price</string>
    <string name="_0">00</string>
    <string name="vat_hint">Vat</string>
    <string name="profile">Profile</string>
    <string name="contacts">Contacts</string>
    <string name="print">Print</string>
    <string name="home">Home</string>
    <string name="write_here">Write here</string>
    <string name="today">Today</string>
    <string name="_7_day">7 day</string>
    <string name="_1_month">1 Month</string>
    <string name="back_button">back button</string>
    <string name="next_button">next Button</string>
    <string name="shopping">Shopping</string>
    <string name="travel">Travel</string>
    <string name="food">Food</string>
    <string name="others">Others</string>
    <string name="add_expense">Add Expense</string>
    <string name="enter_cost_amount">Enter Cost amount</string>
    <string name="cost_activity">Cost Activity</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_number">Enter your Phone Number</string>
    <string name="input_address">Enter your address</string>
    <string name="input_name">Enter your Name</string>
    <string name="input_currency">Enter your Currency</string>
    <string name="edit_info">edit info</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>