<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homefrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home_app_logo_24px"
        android:title="@string/home" />
    <item
        android:id="@+id/printActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/print_24px"
        android:title="@string/print" />
    <item
        android:id="@+id/contactActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/contacts_24px"
        android:title="@string/contacts" />
    <item
        android:id="@+id/ProfileActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/account_circle_24px"
        android:title="@string/profile" />
</menu>