<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/round_shape"
        android:ems="10"
        android:layout_marginBottom="5dp"
        android:inputType="text"
        android:padding="10dp"
        android:hint="@string/input_name" />
    <EditText
        android:id="@+id/input_address"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/round_shape"
        android:ems="10"
        android:inputType="text"
        android:padding="10dp"
        android:hint="@string/input_address" />
    <EditText
        android:id="@+id/input_number"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/round_shape"
        android:ems="10"
        android:inputType="number"
        android:padding="10dp"
        android:hint="@string/enter_number" />

    <EditText
        android:id="@+id/input_cureency"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/round_shape"
        android:ems="10"
        android:inputType="text"
        android:padding="10dp"
        android:hint="@string/input_currency" />
</LinearLayout>